--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -100,3 +100,214 @@
   year=2010,
   publisher={Wiley Online Library}
 }
+
+@article{2008_Weintraub_Benkard_VanRoy_Econometrica,
+  title={Markov perfect industry dynamics with many firms},
+  author={Weintraub, Gabriel Y and Benkard, C Lanier and Van Roy, Benjamin},
+  journal={Econometrica},
+  volume={76},
+  number={6},
+  pages={1375--1411},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{2001_Pakes_McGuire_RAND,
+  title={Stochastic algorithms, symmetric Markov perfect equilibrium, and the ‘curse’ of dimensionality},
+  author={Pakes, Ariel and McGuire, Paul},
+  journal={Econometrica},
+  volume={69},
+  number={5},
+  pages={1261--1281},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@techreport{2007_Doraszelski_Judd,
+  title={Dynamic stochastic games with sequential state-to-state transitions},
+  author={Doraszelski, Ulrich and Judd, K},
+  year={2007},
+  institution={Working paper, Harvard University, Cambridge}
+}
+
+@article{2012_Doraszelski_Judd_QuanEcon,
+  title={Avoiding the curse of dimensionality in dynamic stochastic games},
+  author={Doraszelski, Ulrich and Judd, Kenneth L},
+  journal={Quantitative Economics},
+  volume={3},
+  number={1},
+  pages={53--93},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{2011_Aguirregabiria_Nevo_working,
+  title={Recent developments in empirical IO: Dynamic demand and dynamic games},
+  author={Aguirregabiria, Victor and Nevo, Aviv},
+  year={2013}
+}
+
+@Manual{deldir,
+   title = {deldir: Delaunay Triangulation and Dirichlet (Voronoi) Tessellation},
+   author = {Rolf Turner},
+   year = {2017},
+   note = {R package version 0.1-14},
+   url = {https://CRAN.R-project.org/package=deldir},
+}
+
+@Article{dlib,
+  author = {Davis E. King},
+  title = {Dlib-ml: A Machine Learning Toolkit},
+  journal = {Journal of Machine Learning Research},
+  year = {2009},
+  volume = {10},
+  pages = {1755-1758},
+}
+
+@Article{nlopt,
+  title = {The NLopt nonlinear-optimization package},
+  author = {Steven G. Johnson},
+  year = {2017},
+  note = {NLopt Version 2.4.2},
+  url = {http://ab-initio.mit.edu/wiki/index.php/NLopt}
+}
+
+@article{bfgs1,
+  title = {Updating quasi-Newton matrices with limited storage},
+  author = {Nocedal, Jorge},
+  journal = {Mathematics of computation},
+  volume = {35},
+  number = {151},
+  pages = {773--782},
+  year = {1980}
+}
+
+@article{bfgs2,
+  title = {On the limited memory BFGS method for large scale optimization},
+  author = {Liu, Dong C and Nocedal, Jorge},
+  journal = {Mathematical programming},
+  volume = {45},
+  number = {1},
+  pages = {503--528},
+  year = {1989},
+  publisher = {Springer}
+}
+
+@article{ipopt,
+  title = {On the Implementation of a Primal-Dual Interior Point Filter Line Search Algorithm for Large-Scale Nonlinear Programming},
+  author = {A. Wachter, and L. T. Biegler},
+  year = {2006},
+  journal = {Mathematical Programming},
+  volume = {106},
+  number = {1},
+  pages = {25--57}
+}
+
+@article{direct,
+  title={Lipschitzian optimization without the Lipschitz constant},
+  author={Jones, Donald R and Perttunen, Cary D and Stuckman, Bruce E},
+  journal={Journal of Optimization Theory and Applications},
+  volume={79},
+  number={1},
+  pages={157--181},
+  year={1993},
+  publisher={Springer}
+}
+
+@incollection{cobyla1,
+  title={A direct search optimization method that models the objective and constraint functions by linear interpolation},
+  author={Powell, Michael JD},
+  booktitle={Advances in optimization and numerical analysis},
+  pages={51--67},
+  year={1994},
+  publisher={Springer}
+}
+
+@article{cobyla2,
+  title={Direct search algorithms for optimization calculations},
+  author={Powell, MJD},
+  journal={Acta numerica},
+  volume={7},
+  pages={287--336},
+  year={1998},
+  publisher={Cambridge University Press}
+}
+
+@book{friendly,
+  title={A friendly introduction to numerical analysis: with C and MATLAB materials on website},
+  author={Bradie, Brian},
+  year={2006},
+  publisher={Prentice-Hall}
+}
+
+@article{2006_Chen_Doraszelski,
+  title={Network Effects, Compatibility Choice, and Industry Dynamics: The Duopoly Case},
+  author={Chen, Jiawei and Doraszelski, Ulrich},
+  year={2006}
+}
+
+@article{2015_Benkard_Weintraub_Jeziorski_RAND,
+  title={Oblivious equilibrium for concentrated industries},
+  author={Benkard, C Lanier and Jeziorski, Przemyslaw and Weintraub, Gabriel Y},
+  journal={The RAND Journal of Economics},
+  volume={46},
+  number={4},
+  pages={671--708},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{ann_uni,
+  title={Universal approximation using radial-basis-function networks},
+  author={Park, Jooyoung and Sandberg, Irwin W},
+  journal={Neural computation},
+  volume={3},
+  number={2},
+  pages={246--257},
+  year={1991},
+  publisher={MIT Press}
+}
+
+@article{ann_tutorial,
+  title={Artificial neural networks: A tutorial},
+  author={Jain, Anil K and Mao, Jianchang and Mohiuddin, K Moidin},
+  journal={Computer},
+  volume={29},
+  number={3},
+  pages={31--44},
+  year={1996},
+  publisher={IEEE}
+}
+
+@article{ann_radial,
+  title={Function approximation using artificial neural networks},
+  author={Zainuddin, Zarita and Pauline, Ong},
+  journal={WSEAS Transactions on Mathematics},
+  volume={7},
+  number={6},
+  pages={333--338},
+  year={2008},
+  publisher={World Scientific and Engineering Academy and Society (WSEAS)}
+}
+
+@article{ann_disc,
+  title={Constructive approximation of discontinuous functions by neural networks},
+  author={Llanas, Bernardo and Lantar{\'o}n, Sagrario and S{\'a}inz, Francisco J},
+  journal={Neural Processing Letters},
+  volume={27},
+  number={3},
+  pages={209--226},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{ann_herm,
+  title={Hermite interpolation by neural networks},
+  author={Llanas, Bernardo and Lantar{\'o}n, Sagrario},
+  journal={Applied Mathematics and Computation},
+  volume={191},
+  number={2},
+  pages={429--439},
+  year={2007},
+  publisher={Elsevier}
+}
