--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -311,3 +311,32 @@
   year={2007},
   publisher={Elsevier}
 }
+
+@article{anndeep,
+  author    = {Shiyu Liang and
+               R. Srikant},
+  title     = {Why Deep Neural Networks?},
+  journal   = {CoRR},
+  volume    = {abs/1610.04161},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1610.04161},
+  timestamp = {Wed, 07 Jun 2017 14:41:47 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/LiangS16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@book{powellbook,
+  title={Approximate Dynamic Programming: Solving the curses of dimensionality},
+  author={Powell, Warren B},
+  volume={703},
+  year={2007},
+  publisher={John Wiley \& Sons}
+}
+
+@article{dlt,
+  title={Budgeting time for dynamic vehicle routing with stochastic customer requests},
+  author={Ulmer, Marlin W and Mattfeld, Dirk C and K{\"o}ster, Felix},
+  journal={Transportation Science},
+  year={2017},
+  publisher={INFORMS}
+}
