--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -97,7 +97,7 @@
   volume=41,
   number=2,
   pages={215--243},
-  year=2010,
+  year={2010},
   publisher={Wiley Online Library}
 }
 
@@ -141,10 +141,13 @@
   publisher={Wiley Online Library}
 }
 
-@article{2011_Aguirregabiria_Nevo_working,
+@incollection{2011_Aguirregabiria_Nevo_working,
   title={Recent developments in empirical IO: Dynamic demand and dynamic games},
   author={Aguirregabiria, Victor and Nevo, Aviv},
-  year={2013}
+  year=2013,
+  booktitle={Advances in Economics and Econometrics},
+  volume=3,
+  publisher={Tenth World Congress of the Econometric Society}
 }
 
 @Manual{deldir,
